--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14674,10 +14674,6 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -14792,6 +14788,21 @@ body[dir="rtl"] .checkbox:checked,
 }
 .mb-20 {
   margin-bottom: 5rem;
+}
+.-mt-12 {
+  margin-top: -3rem;
+}
+.mt-20 {
+  margin-top: 5rem;
+}
+.-mt-4 {
+  margin-top: -1rem;
+}
+.-mt-20 {
+  margin-top: -5rem;
+}
+.-mt-16 {
+  margin-top: -4rem;
 }
 .block {
   display: block;
@@ -14959,6 +14970,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .w-48 {
   width: 12rem;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .min-w-full {
   min-width: 100%;
@@ -15151,6 +15165,9 @@ body[dir="rtl"] .checkbox:checked,
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
+}
+.gap-y-6 {
+  row-gap: 1.5rem;
 }
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -15672,6 +15689,18 @@ body[dir="rtl"] .checkbox:checked,
 .pl-3 {
   padding-left: 0.75rem;
 }
+.pr-6 {
+  padding-right: 1.5rem;
+}
+.pr-3 {
+  padding-right: 0.75rem;
+}
+.pl-0\.5 {
+  padding-left: 0.125rem;
+}
+.pl-0 {
+  padding-left: 0px;
+}
 .text-left {
   text-align: left;
 }
@@ -15914,6 +15943,10 @@ body[dir="rtl"] .checkbox:checked,
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
+}
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -18162,6 +18195,10 @@ iframe.Discord {
     width: 2.5rem;
   }
 
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .sm\:max-w-xl {
     max-width: 36rem;
   }
@@ -18568,6 +18605,10 @@ iframe.Discord {
 
   .md\:w-56 {
     width: 14rem;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:max-w-7xl {
@@ -19118,6 +19159,10 @@ iframe.Discord {
 }
 
 @media (min-width: 1280px) {
+
+  .xl\:w-1\/3 {
+    width: 33.333333%;
+  }
 
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -19859,6 +19904,10 @@ iframe.Discord {
 
   .xs\:w-10 {
     width: 2.5rem;
+  }
+
+  .xs\:w-1\/2 {
+    width: 50%;
   }
 
   .xs\:scale-90 {
