--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14640,6 +14640,9 @@ body[dir="rtl"] .checkbox:checked,
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -14677,6 +14680,18 @@ body[dir="rtl"] .checkbox:checked,
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.-mx-12 {
+  margin-left: -3rem;
+  margin-right: -3rem;
+}
+.-mx-6 {
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
+}
+.-mx-3 {
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -14771,6 +14786,12 @@ body[dir="rtl"] .checkbox:checked,
 .mb-10 {
   margin-bottom: 2.5rem;
 }
+.mb-20 {
+  margin-bottom: 5rem;
+}
+.-mt-16 {
+  margin-top: -4rem;
+}
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -14786,23 +14807,8 @@ body[dir="rtl"] .checkbox:checked,
 .mb-1 {
   margin-bottom: 0.25rem;
 }
-.mb-20 {
-  margin-bottom: 5rem;
-}
-.-mt-12 {
-  margin-top: -3rem;
-}
-.mt-20 {
-  margin-top: 5rem;
-}
-.-mt-4 {
-  margin-top: -1rem;
-}
-.-mt-20 {
-  margin-top: -5rem;
-}
-.-mt-16 {
-  margin-top: -4rem;
+.-ml-6 {
+  margin-left: -1.5rem;
 }
 .block {
   display: block;
@@ -14873,6 +14879,9 @@ body[dir="rtl"] .checkbox:checked,
 .h-3 {
   height: 0.75rem;
 }
+.h-60 {
+  height: 15rem;
+}
 .h-screen {
   height: 100vh;
 }
@@ -14888,14 +14897,16 @@ body[dir="rtl"] .checkbox:checked,
 .h-1\/2 {
   height: 50%;
 }
-.h-60 {
-  height: 15rem;
-}
 .h-56 {
   height: 14rem;
 }
 .h-48 {
   height: 12rem;
+}
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 .max-h-\[14rem\] {
   max-height: 14rem;
@@ -14970,9 +14981,6 @@ body[dir="rtl"] .checkbox:checked,
 }
 .w-48 {
   width: 12rem;
-}
-.w-1\/3 {
-  width: 33.333333%;
 }
 .min-w-full {
   min-width: 100%;
@@ -15091,6 +15099,9 @@ body[dir="rtl"] .checkbox:checked,
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
@@ -15133,6 +15144,9 @@ body[dir="rtl"] .checkbox:checked,
 .justify-between {
   justify-content: space-between;
 }
+.justify-around {
+  justify-content: space-around;
+}
 .gap-3 {
   gap: 0.75rem;
 }
@@ -15152,6 +15166,9 @@ body[dir="rtl"] .checkbox:checked,
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
+.gap-y-6 {
+  row-gap: 1.5rem;
+}
 .gap-y-16 {
   row-gap: 4rem;
 }
@@ -15165,9 +15182,6 @@ body[dir="rtl"] .checkbox:checked,
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
-}
-.gap-y-6 {
-  row-gap: 1.5rem;
 }
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -15211,6 +15225,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .self-start {
   align-self: flex-start;
+}
+.self-end {
+  align-self: flex-end;
 }
 .self-baseline {
   align-self: baseline;
@@ -15349,13 +15366,13 @@ body[dir="rtl"] .checkbox:checked,
   --tw-border-opacity: 1;
   border-color: hsl(var(--er) / var(--tw-border-opacity));
 }
-.border-blue-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(191 219 254 / var(--tw-border-opacity));
-}
 .border-blue-100 {
   --tw-border-opacity: 1;
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
+}
+.border-blue-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(191 219 254 / var(--tw-border-opacity));
 }
 .border-info {
   --tw-border-opacity: 1;
@@ -15537,6 +15554,10 @@ body[dir="rtl"] .checkbox:checked,
   -o-object-position: center;
      object-position: center;
 }
+.object-left {
+  -o-object-position: left;
+     object-position: left;
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -15653,6 +15674,12 @@ body[dir="rtl"] .checkbox:checked,
 .pb-5 {
   padding-bottom: 1.25rem;
 }
+.pl-0\.5 {
+  padding-left: 0.125rem;
+}
+.pl-0 {
+  padding-left: 0px;
+}
 .pr-12 {
   padding-right: 3rem;
 }
@@ -15689,17 +15716,17 @@ body[dir="rtl"] .checkbox:checked,
 .pl-3 {
   padding-left: 0.75rem;
 }
-.pr-6 {
-  padding-right: 1.5rem;
+.pb-28 {
+  padding-bottom: 7rem;
 }
-.pr-3 {
-  padding-right: 0.75rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
-.pl-0\.5 {
-  padding-left: 0.125rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
-.pl-0 {
-  padding-left: 0px;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .text-left {
   text-align: left;
@@ -15896,6 +15923,10 @@ body[dir="rtl"] .checkbox:checked,
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
+.text-cyan-300 {
+  --tw-text-opacity: 1;
+  color: rgb(103 232 249 / var(--tw-text-opacity));
+}
 .text-accent {
   --tw-text-opacity: 1;
   color: hsl(var(--a) / var(--tw-text-opacity));
@@ -15911,10 +15942,6 @@ body[dir="rtl"] .checkbox:checked,
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-cyan-300 {
-  --tw-text-opacity: 1;
-  color: rgb(103 232 249 / var(--tw-text-opacity));
 }
 .text-primary {
   --tw-text-opacity: 1;
@@ -15943,10 +15970,6 @@ body[dir="rtl"] .checkbox:checked,
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
-}
-.text-blue-700 {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -16621,9 +16644,9 @@ iframe.Discord {
   color: hsl(var(--b1) / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-600:hover {
+.hover\:text-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: hsl(var(--p) / var(--tw-text-opacity));
 }
 
 .hover\:text-cyan-300:hover {
@@ -16631,14 +16654,14 @@ iframe.Discord {
   color: rgb(103 232 249 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.hover\:text-primary:hover {
-  --tw-text-opacity: 1;
-  color: hsl(var(--p) / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -18127,6 +18150,10 @@ iframe.Discord {
     margin-right: 0px;
   }
 
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .sm\:mb-6 {
     margin-bottom: 1.5rem;
   }
@@ -18141,10 +18168,6 @@ iframe.Discord {
 
   .sm\:-mb-32 {
     margin-bottom: -8rem;
-  }
-
-  .sm\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .sm\:-mt-20 {
@@ -18191,12 +18214,12 @@ iframe.Discord {
     width: 5rem;
   }
 
-  .sm\:w-10 {
-    width: 2.5rem;
-  }
-
   .sm\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .sm\:w-10 {
+    width: 2.5rem;
   }
 
   .sm\:max-w-xl {
@@ -18310,6 +18333,11 @@ iframe.Discord {
     padding-bottom: 3rem;
   }
 
+  .sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -18328,11 +18356,6 @@ iframe.Discord {
   .sm\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
-  }
-
-  .sm\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .sm\:pt-0 {
@@ -18379,6 +18402,14 @@ iframe.Discord {
     padding-left: 0px;
   }
 
+  .sm\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .sm\:pb-16 {
+    padding-bottom: 4rem;
+  }
+
   .sm\:text-left {
     text-align: left;
   }
@@ -18411,14 +18442,14 @@ iframe.Discord {
     line-height: 2.5rem;
   }
 
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .sm\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:text-base {
@@ -18591,6 +18622,10 @@ iframe.Discord {
     width: 66.666667%;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .md\:w-14 {
     width: 3.5rem;
   }
@@ -18605,10 +18640,6 @@ iframe.Discord {
 
   .md\:w-56 {
     width: 14rem;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:max-w-7xl {
@@ -18745,6 +18776,14 @@ iframe.Discord {
 
   .md\:pl-2 {
     padding-left: 0.5rem;
+  }
+
+  .md\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .md\:pb-16 {
+    padding-bottom: 4rem;
   }
 
   .md\:text-left {
@@ -19128,6 +19167,14 @@ iframe.Discord {
     padding-left: 0.5rem;
   }
 
+  .lg\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .lg\:pb-20 {
+    padding-bottom: 5rem;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -19159,10 +19206,6 @@ iframe.Discord {
 }
 
 @media (min-width: 1280px) {
-
-  .xl\:w-1\/3 {
-    width: 33.333333%;
-  }
 
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -19902,12 +19945,12 @@ iframe.Discord {
     width: 5rem;
   }
 
-  .xs\:w-10 {
-    width: 2.5rem;
-  }
-
   .xs\:w-1\/2 {
     width: 50%;
+  }
+
+  .xs\:w-10 {
+    width: 2.5rem;
   }
 
   .xs\:scale-90 {
@@ -19975,6 +20018,11 @@ iframe.Discord {
     padding-right: 0px;
   }
 
+  .xs\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .xs\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -19988,11 +20036,6 @@ iframe.Discord {
   .xs\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
-  }
-
-  .xs\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .xs\:pt-0 {
