--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14586,6 +14586,9 @@ body[dir="rtl"] .checkbox:checked,
 .top-12 {
   top: 3rem;
 }
+.top-16 {
+  top: 4rem;
+}
 .top-10 {
   top: 2.5rem;
 }
@@ -15217,6 +15220,9 @@ body[dir="rtl"] .checkbox:checked,
 .overflow-scroll {
   overflow: scroll;
 }
+.overflow-x-auto {
+  overflow-x: auto;
+}
 .overflow-x-scroll {
   overflow-x: scroll;
 }
@@ -15413,6 +15419,10 @@ body[dir="rtl"] .checkbox:checked,
 .bg-error {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--er) / var(--tw-bg-opacity));
+}
+.bg-indigo-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }
 .bg-teal-300 {
   --tw-bg-opacity: 1;
@@ -15650,6 +15660,9 @@ body[dir="rtl"] .checkbox:checked,
 .pl-1 {
   padding-left: 0.25rem;
 }
+.pt-6 {
+  padding-top: 1.5rem;
+}
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -15679,9 +15692,6 @@ body[dir="rtl"] .checkbox:checked,
 }
 .pt-2 {
   padding-top: 0.5rem;
-}
-.pt-6 {
-  padding-top: 1.5rem;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -15760,6 +15770,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .font-extrabold {
   font-weight: 800;
+}
+.font-thin {
+  font-weight: 100;
 }
 .uppercase {
   text-transform: uppercase;
@@ -16979,6 +16992,11 @@ iframe.Discord {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.focus\:bg-indigo-500:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -17049,6 +17067,11 @@ iframe.Discord {
 .focus\:ring-indigo-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-indigo-700:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(67 56 202 / var(--tw-ring-opacity));
 }
 
 .focus\:ring-error:focus {
@@ -18629,6 +18652,10 @@ iframe.Discord {
     flex-direction: row;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
   .md\:flex-nowrap {
     flex-wrap: nowrap;
   }
@@ -18669,6 +18696,10 @@ iframe.Discord {
 
   .md\:p-3 {
     padding: 0.75rem;
+  }
+
+  .md\:p-6 {
+    padding: 1.5rem;
   }
 
   .md\:px-4 {
@@ -18971,7 +19002,15 @@ iframe.Discord {
     width: 66.666667%;
   }
 
+  .lg\:w-4\/6 {
+    width: 66.666667%;
+  }
+
   .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-2\/6 {
     width: 33.333333%;
   }
 
@@ -19015,6 +19054,10 @@ iframe.Discord {
     align-items: center;
   }
 
+  .lg\:items-stretch {
+    align-items: stretch;
+  }
+
   .lg\:justify-end {
     justify-content: flex-end;
   }
@@ -19048,6 +19091,10 @@ iframe.Discord {
 
   .lg\:p-3 {
     padding: 0.75rem;
+  }
+
+  .lg\:p-4 {
+    padding: 1rem;
   }
 
   .lg\:px-8 {
@@ -19114,6 +19161,10 @@ iframe.Discord {
     padding-right: 1rem;
   }
 
+  .lg\:pl-8 {
+    padding-left: 2rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -19169,10 +19220,6 @@ iframe.Discord {
 }
 
 @media (min-width: 1280px) {
-
-  .xl\:flex {
-    display: flex;
-  }
 
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
