--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15545,6 +15545,12 @@ body[dir="rtl"] .checkbox:checked,
 .fill-secondary {
   fill: hsl(var(--s));
 }
+.fill-info {
+  fill: hsl(var(--in));
+}
+.fill-warning {
+  fill: hsl(var(--wa));
+}
 .stroke-current {
   stroke: currentColor;
 }
